--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,49 @@
-torch
-gymnasium
-numpy
-pandas
-matplotlib
-tqdm
-wandb
-requests
+annotated-types==0.7.0
+certifi==2026.1.4
+charset-normalizer==3.4.4
+click==8.1.8
+cloudpickle==3.1.2
+contourpy==1.3.0
+cycler==0.12.1
+eval_type_backport==0.3.1
+Farama-Notifications==0.0.4
+filelock==3.19.1
+fonttools==4.60.2
+fsspec==2025.10.0
+gitdb==4.0.12
+GitPython==3.1.46
+gymnasium==1.1.1
+idna==3.11
+importlib_metadata==8.7.1
+importlib_resources==6.5.2
+Jinja2==3.1.6
+kiwisolver==1.4.7
+MarkupSafe==3.0.3
+matplotlib==3.9.4
+mpmath==1.3.0
+networkx==3.2.1
+numpy==1.26.4
+packaging==25.0
+pandas==2.3.3
+pillow==11.3.0
+platformdirs==4.4.0
+protobuf==6.33.4
+pydantic==2.12.5
+pydantic_core==2.41.5
+pyparsing==3.3.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.3
+requests==2.32.5
+sentry-sdk==2.49.0
+six==1.17.0
+smmap==5.0.2
+sympy==1.14.0
+torch==2.2.2
+tqdm==4.67.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.3
+wandb==0.24.0
+zipp==3.23.0
